    default generated password, by editing the `settings.yml` configuration
    file, or by using the `--csrf-secret` option.

Widgets
-------

### Default Labels

When a label is auto-generated from the field name, `_id` suffixes are now
removed:

  * `first_name` => First name (as before)
  * `author_id` => Author (was "Author id" before)

### `sfValidatorSchemaCompare`

The `sfValidatorSchemaCompare` class has two new comparators:

 * `IDENTICAL`, which is equivalent to `===`;
 * `NOT_IDENTICAL`, which is equivalent to `!==`;

sfToolkit
---------

The `getTmpDir()` method has been deprecated and is no longer used in the
symfony core classes. You can replace usage of this method by the built-in
`sys_get_temp_dir()` PHP function. The `getTmpDir()` is now just a proxy to
this method.

This method will be removed in the symfony 1.4.

Forms
-----

### `sfForm::useFields()`

The new `sfForm::useFields()` method removes all fields from a form except the
ones given as an argument. It is sometimes easier to explicitly give the
fields you want to keep in a form, instead of unsetting all unneeded fields.
For instance, when adding new fields to a base form, they won't automagically
appears in your form until explicitly added (think of a model form where you
add a new column to the related table).

    [php]
    class ArticleForm extends BaseArticleForm
    {
      public function configure()
      {
        $this->useFields(array('title', 'content'));
      }
    }

By default, the array of fields is also used to change the fields order. You
can pass `false` as the second argument to `useFields()` to disable the
automatic reordering.

Validators
----------

### Default Error Messages

You can now define default error messages globally by using the
`sfForm::setDefaultMessage()` method:

    [php]
    sfValidatorBase::setDefaultMessage('required', 'This field is required.');

The previous code will override the default 'Required.' message for all